[metadata]
name = PiQuantum
version = 0.1.0
author = PiQuantum Team
author_email = support@piquantum.com
description = A high-tech cryptography library for secure communication.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/piquantum/piquantum
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Security :: Cryptography

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    cryptography>=3.4.7
    pycryptodome>=3.15.0
    pycryptodomex>=3.15.0
    pycrypt>=2.6
    pycryptdk>=2.0.1
    pycryptography>=0.2.1
    pycryptix>=0.5
    pycryptopp>=0.6.1
    pyopenssl>=21.0.0

[options.package_data]
* = *.py

[options.extras_require]
test =
    pytest>=6.2.5
    pytest-cov>=3.0.0
    pytest-sugar>=0.9.4
    pytest-xdist>=2.5.0
    pytest-benchmark>=3.4.1

[options.entry_points]
console_scripts =
    piquantum = piquantum.cli:main
